[package]
name = "jumpch"
version = "1.0.0"
edition = "2021"
description = "Jump Consistent Hashing is a fast, minimal memory, consistent hash algorithm."
documentation = "https://docs.rs/jumpch"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["consistent", "hash", "hashing", "algorithm", "jump-consistent-hash"]
categories = ["algorithms"]
authors = ["Mnwa <mikhail@panfilov.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
