[package]
name = "jumpch"
version = "2.0.0"
edition = "2024"
description = "Jump Consistent Hashing is a fast, minimal memory, consistent hash algorithm."
documentation = "https://docs.rs/jumpch"
readme = "Readme.md"
license = "MIT OR Apache-2.0"
keywords = ["consistent", "hash", "hashing", "algorithm", "jump-consistent-hash"]
categories = ["algorithms"]
authors = ["Mnwa <mikhail@panfilov.tech>"]
repository = "https://github.com/Mnwa/jumpch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
